push it to the limit

--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div>
-<p><%= allProducts[0] %></p>
+<p><%= products %></p>
 <br>
 <br>
-<p><%= allProducts[1] %></p>
+
 
     </div>
 </body>
