--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,9 @@
-body {
-  background-color: #7f8345;
+.container-fluid {
+  #subscribebox {
+    background-color: #7f8375;
+    color: white;
+    text-align: center;
+    font-family: "spartan";
+    padding: 8px;
+  }
 }
