--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,3 +1,29 @@
-<footer>
-  <div id="boxfooter"></div>
+<footer class="mt-5">
+  <div class="container-fluid">
+    <div class="informationbox">
+
+      <div class="col-sm-12">
+        <div class="informationlist">
+          <h2 class="information">Information</h2>
+          <ul>
+            <li>About GECKO</li>
+            <li>Sign in</li>
+            <li>Customer service</li>
+            <li>Careers</li>
+            <li>Press</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-sm-12">
+        <div class="accountlist">
+          <ul>
+            <li>My account</li>
+            <li>Privacy policy</li>
+            <li>Shipping to: Worldwide</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </footer>
