--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,18 @@
+@import 'navAndFooter';
+@import 'startPage';
+@import 'adminPage';
+@import 'loginPopUp';
+@import 'miniShoppingCart';
+@import 'productPage';
+@import 'shoppingCart';
+
+
 .container-fluid {
-  #subscribebox {
-    background-color: #7f8375;
-    color: white;
-    text-align: center;
-    font-family: "spartan";
-    padding: 8px;
-  }
+    #subscribebox {
+        background-color: #7f8375;
+        color: white;
+        text-align: center;
+        font-family: "spartan";
+        padding: 8px;
+    }
 }
