--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -39,15 +39,23 @@
         <% products.forEach((product) => {  %>
             <div>
                 <form action="/edit/<%= product._id %>" method="POST">
-                    <p>Title: <input type="text" value="<%= product.title %>"></p>
-                    <p>imgUrl: <%= product.imgUrl %></p>
-                    <p>Price: <%= product.price %></p>
-                    <p>Description: <%= product.description %></p>
-                    <p>Size: <%= product.size %></p>
-                    <p>New arrival: <%= product.newArrival %></p>
-                    <p>Top seller: <%= product.topSeller %></p>
-                    <p>Male: <%= product.male %></p>
-                    <p>Female: <%= product.female %></p>
+                    <p>Title: <input name="title" type="text" value="<%= product.title %>"></p>
+                    <p>imgUrl: <input name="imgUrl" type="text" value="<%= product.imgUrl %>"></p>
+                    <p>Price: <input name="price" type="text" value="<%= product.price %>"></p>
+                    <p>Description: <input name="description" type="text" value="<%= product.description %>"></p>
+                    <p>Size: <input name="size" type="text" value="<%= product.size %>"></p>
+                    <p>New arrival: <input name="newArrival" type="checkbox" <% if(product.newArrival){%>
+                        checked 
+                        <%} %> ></p>
+                    <p>Top seller: <input name="topSeller" type="checkbox" <% if(product.topSeller){%>
+                        checked 
+                        <%} %> ></p>
+                    <p>Male: <input name="male" type="checkbox" <% if(product.male){%>
+                        checked 
+                        <%} %> ></p>
+                    <p>Female: <input name="female" type="checkbox" <% if(product.female){%>
+                        checked 
+                        <%} %> ></p>
                     <button type="submit">Edit product</button>
                 </form>
                 <hr>
