sending info to product page

--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -9,6 +9,9 @@
 <body>
     <div>
 
+        <h2><%= heading %></h2>
+        <p><%= categoryInfo %></p>
+
         <% products.forEach((product) => { %>
 
             <div>
