--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -1,27 +1,35 @@
-<div class="row" id="navbar">
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">GECKO</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </div>
-    </nav>
+<div class="toggle">
+    <button type="button" class="hambutton"><i class="fas fa-bars fa-2x menu" aria-hidden="true"></i></button>
 </div>
+<nav>
+    <div class="search">
+        <i class="fas fa-search fa-lg"></i><input type="text" class="inputsearch">
+    </div>
+    <hr>
+    <ul>
+        <li><a href="#">Women</a>
+        <li><a href="#">T-Shirts</a></li>
+        <li><a href="#">Crewnecks</a></li>
+        <li><a href="#">Hoddie</a></li>
+        </li>
+        <li><a href="#">T-Shirts</a></li>
+        <li><a href="#">Crewnecks</a></li>
+        <li><a href="#">Hoddie</a></li>
+
+        <li><a href="#">Men</a></li>
+        <li><a href="#">T-Shirts</a></li>
+        <li><a href="#">Crewnecks</a></li>
+        <li><a href="#">Hoddie</a></li>
+    </ul>
+    <hr>
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Subcribe</a></li>
+        <li><a href="#">Store Locator</a></li>
+        <li><a href="#">Customer Service</a></li>
+        <li><a href="#">Sign in</a></li>
+        <li><a href="#">Shipping to: Worldwide</a></li>
+
+    </ul>
+
+</nav>
