--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,55 @@
-li {
-  list-style-type: none; }
+body {
+  font-family: sans-serif; }
+  body nav {
+    width: 100%;
+    background: #f7f7f7;
+    z-index: 1;
+    position: fixed;
+    left: -100%;
+    transition: all 500ms linear; }
+    body nav .search {
+      width: 100%;
+      padding: 10px; }
+      body nav .search .inputsearch {
+        width: 90%;
+        border: none;
+        border-bottom: 1px solid #7f8375;
+        background: #f7f7f7; }
+    body nav ul {
+      width: 80%;
+      margin: 0 auto;
+      padding: 0; }
+      body nav ul li {
+        list-style: none;
+        padding: 5px;
+        color: #7f8375;
+        text-decoration: none; }
+        body nav ul li a {
+          color: #7f8375;
+          text-decoration: none; }
+        body nav ul li :hover {
+          color: black;
+          text-decoration: none; }
+  body .toggle {
+    width: 100%;
+    padding: 10px 20px;
+    text-align: left;
+    background-color: bisque; }
+    body .toggle .hambutton {
+      border: none;
+      background: bisque; }
+  body nav.active {
+    left: 0px; }
+  body .close {
+    cursor: pointer;
+    transform: rotate(45deg); }
+
+.container-fluid {
+  background-color: #7f8375;
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
+  .container-fluid li {
+    list-style-type: none; }
 
 .container-fluid #subscribebox {
   background-color: #7f8375;
