--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,6 @@
+@import url("https://fonts.googleapis.com/css?family=Spartan&display=swap");
 body {
-  font-family: sans-serif; }
+  font-family: 'Spartan', sans-serif; }
   body nav {
     width: 100%;
     background: #f7f7f7;
@@ -47,9 +48,10 @@ body {
 .container-fluid {
   background-color: #7f8375;
   color: white;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
+  font-family: 'Spartan', sans-serif; }
   .container-fluid li {
-    list-style-type: none; }
+    list-style-type: none;
+    font-weight: 1px; }
 
 .container-fluid #subscribebox {
   background-color: #7f8375;
