--- a/scss/_navAndFooter.scss
+++ b/scss/_navAndFooter.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: sans-serif;
+    font-family: 'Spartan', sans-serif;
 
     nav {
         width: 100%;
@@ -71,13 +71,17 @@ body {
 }
 
 // footer
+
 .container-fluid {
     background-color: #7f8375;
     color: white;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Spartan', sans-serif;
+    
 
     li {
         list-style-type: none;
+        font-weight: 1px;
 
     }
+
 }
