--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
+    <%- include ("partial/header.ejs") %>
 <body>
-    <div>
+    <%- include ("partial/navbar.ejs") %>
+
+    <div class="headerContainer">
 
         <h2><%= heading %></h2>
         <p><%= categoryInfo %></p>
-
-        <% products.forEach((product) => { %>
-
-            <div>
-                <h2><a href="/products/<%= product._id %>"><%= product.title %></a></h2>
-                <h2><%= product.description %></h2>
-                <h2><%= product.price %></h2>
-            </div>
-
-        <% }) %>
-
+        
     </div>
+
+    <% products.forEach((product) => { %>
+
+        <div>
+            <img src="<%= product.imgUrl %>" alt="productImage">
+            <h2><a href="/products/<%= product._id %>"><%= product.title %></a></h2>
+            <p><%= product.description %></p>
+            <p><%= product.price %></p>
+        </div>
+
+    <% }) %>
+
+    
+
+
+    <%- include ("partial/footer.ejs") %>
 </body>
 </html>
