--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,4 +5,4 @@
 @import 'miniShoppingCart';
 @import 'productPage';
 @import 'shoppingCart';
-@import url('https://fonts.googleapis.com/css?family=Spartan&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Spartan:100&display=swap');
