--- a/scss/_navAndFooter.scss
+++ b/scss/_navAndFooter.scss
@@ -1,5 +1,8 @@
 body {
-    font-family: 'Spartan', sans-serif;
+
+    div {
+        font-family: 'Spartan', sans-serif;
+    }
 
     nav {
         width: 100%;
@@ -8,6 +11,8 @@ body {
         position: fixed;
         left: -100%;
         transition: all 500ms linear;
+        font-family: 'Spartan', sans-serif;
+        
 
         .search {
             width: 100%;
@@ -74,14 +79,26 @@ body {
 
 .container-fluid {
     background-color: #7f8375;
+    opacity: 70%;
     color: white;
-    font-family: 'Spartan', sans-serif;
-    
+    letter-spacing: 3px;
 
     li {
         list-style-type: none;
-        font-weight: 1px;
+        padding: 5px;
+        justify-content: left;
 
+    }
+
+    ul {
+        padding-left: 2px;
+    }
+
+    .information {
+        padding-left: 2px;
+        text-transform: uppercase;
+        font-size: 13px;
+        font-weight: bold;
     }
 
 }
