--- a/public/main.css
+++ b/public/main.css
@@ -50,22 +50,29 @@ body .close {
   cursor: pointer;
   transform: rotate(45deg); }
 
-.container-fluid {
+.myFooter {
   background-color: #7f8375;
   opacity: 70%;
   color: white;
-  letter-spacing: 3px; }
-  .container-fluid li {
+  letter-spacing: 3px;
+  padding-top: 70px;
+  padding-bottom: 50px;
+  position: absolute; }
+  .myFooter li {
     list-style-type: none;
     padding: 5px;
-    justify-content: left; }
-  .container-fluid ul {
+    justify-content: left;
+    font-size: 15px; }
+  .myFooter ul {
     padding-left: 2px; }
-  .container-fluid .information {
+  .myFooter .information {
     padding-left: 2px;
     text-transform: uppercase;
     font-size: 13px;
     font-weight: bold; }
+  .myFooter .line {
+    border: 0.4px solid white;
+    opacity: 50%; }
 
 .container-fluid #subscribebox {
   background-color: #7f8375;
