--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,11 +1,11 @@
 <footer class="mt-5">
-  <div class="container-fluid">
+  <div class="container-fluid myFooter">
     <div class="informationbox">
 
       <div class="col-sm-12">
         <div class="informationlist">
           <h2 class="information">Information</h2>
-          <hr>
+          <hr class="line">
           <ul>
             <li>About GECKO</li>
             <li>Sign in</li>
@@ -15,9 +15,9 @@
           </ul>
         </div>
       </div>
-
       <div class="col-sm-12">
         <div class="accountlist">
+          <hr class="line">
           <ul>
             <li>My account</li>
             <li>Privacy policy</li>
