--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="mt-5">
+<footer id="sticky-footer">
   <div class="container-fluid myFooter">
     <div class="informationbox">
 
@@ -17,7 +17,6 @@
       </div>
       <div class="col-sm-12">
         <div class="accountlist">
-          <hr class="line">
           <ul>
             <li>My account</li>
             <li>Privacy policy</li>
