--- a/public/main.css
+++ b/public/main.css
@@ -90,10 +90,37 @@ body .categoryContainer {
     align-items: center;
     width: 100%;
     height: 100px; }
+    body .categoryContainer .categoryContainerHeader h2 {
+      font-size: 2rem; }
   body .categoryContainer .categoryContainerCategory {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 90%;
+    width: 94%;
     height: 80px;
     border-bottom: 1px solid #cecece; }
+
+body .productContainer {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap; }
+  body .productContainer .product {
+    width: 45%; }
+    body .productContainer .product .productImage img {
+      width: 100%; }
+    body .productContainer .product .productTitle {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: row;
+      flex-wrap: wrap; }
+      body .productContainer .product .productTitle .title {
+        width: 80%; }
+      body .productContainer .product .productTitle .colors {
+        width: 20%; }
+    body .productContainer .product .productPrice {
+      width: 100%; }
+      body .productContainer .product .productPrice .price {
+        font-style: italic; }
