--- a/scss/_productPage.scss
+++ b/scss/_productPage.scss
@@ -18,20 +18,60 @@ body {
             align-items: center;
             width: 100%;
             height: 100px;
+
+            h2 {
+                font-size: 2rem;
+            }
         }
         .categoryContainerCategory {
             display: flex;
             justify-content: space-evenly;
             align-items: center;
-            width: 90%;
+            width: 94%;
             height: 80px;
             border-bottom: 1px solid rgb(206, 206, 206);
-
-            p {
-                
-            }
         }
+    }
 
+    .productContainer {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+
+        .product {
+            width: 45%;
+
+            .productImage {
+
+                img {
+                    width: 100%;
+                }
+            }
+            .productTitle {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                flex-direction: row;
+                flex-wrap: wrap;
+
+                .title {
+                    width: 80%;
+                }
+                .colors {
+                    width: 20%;
+                }
+            }
+            .productPrice {
+                width: 100%;
+
+                .price {
+                    font-style: italic;
+                }
+            }
+            
+        }
     }
 
 
