--- a/scss/_productPage.scss
+++ b/scss/_productPage.scss
@@ -67,7 +67,8 @@ body {
                 width: 100%;
 
                 .price {
-                    font-style: italic;
+                    font-weight: 700;
+                    font-size: 80%;
                 }
             }
             
