--- a/public/main.css
+++ b/public/main.css
@@ -66,14 +66,15 @@ body .close {
       list-style-type: none;
       padding: 5px;
       justify-content: left;
-      font-size: 13px; }
+      font-size: 13px;
+      font-weight: 100; }
     #sticky-footer .myFooter ul {
       padding-left: 2px; }
     #sticky-footer .myFooter .information {
       padding-left: 2px;
       text-transform: uppercase;
       font-size: 11px;
-      font-weight: bold; }
+      font-weight: 700; }
     #sticky-footer .myFooter .line {
       border: 0.4px solid white;
       opacity: 50%; }
@@ -82,8 +83,10 @@ body .close {
   background-color: #7f8375;
   color: white;
   text-align: center;
-  font-family: "spartan";
-  padding: 8px; }
+  font-family: 'Spartan', sans-serif;
+  padding: 8px;
+  font-weight: 100;
+  font-size: 80%; }
 
 body div {
   font-family: 'Spartan', sans-serif; }
