--- a/scss/_navAndFooter.scss
+++ b/scss/_navAndFooter.scss
@@ -12,7 +12,6 @@ body {
         left: -100%;
         transition: all 500ms linear;
         font-family: 'Spartan', sans-serif;
-        
 
         .search {
             width: 100%;
@@ -97,6 +96,7 @@ body {
             padding: 5px;
             justify-content: left;
             font-size: 13px;
+            font-weight: 100;
         }
 
         ul {
@@ -107,7 +107,7 @@ body {
             padding-left: 2px;
             text-transform: uppercase;
             font-size: 11px;
-            font-weight: bold;
+            font-weight: 700;
         }
 
         .line {
