--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -1,7 +1,7 @@
 <div class="toggle">
     <button type="button" class="hambutton"><i class="fas fa-bars fa-2x menu" aria-hidden="true"></i></button>
 </div>
-<nav>
+<nav class="nav">
     <div class="search">
         <i class="fas fa-search fa-lg"></i><input type="text" class="inputsearch">
     </div>
