--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,9 @@
-@import 'navAndFooter';
+@import 'navbar';
 @import 'startPage';
 @import 'adminPage';
 @import 'loginPopUp';
 @import 'miniShoppingCart';
 @import 'productPage';
 @import 'shoppingCart';
+@import 'footer';
 @import url('https://fonts.googleapis.com/css?family=Spartan:100,200,300,400,500,600,700,800,900&display=swap');
