--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,4 +1,6 @@
 body {
+    
+    padding-bottom: 0;
 
     div {
         font-family: 'Spartan', sans-serif;
@@ -72,47 +74,5 @@ body {
         cursor: pointer;
         transform: rotate(45deg);
     }
-}
 
-// footer
-
-#sticky-footer {
-    padding: 0px;
-    margin-top: 10px;
-
-    .myFooter {
-        background-color: #7f8375;
-        opacity: 70%;
-        color: white;
-        letter-spacing: 3px;
-        padding-top: 70px;
-        padding-bottom: 50px;
-        position: absolute;
-        flex: none;
-
-
-        li {
-            list-style-type: none;
-            padding: 5px;
-            justify-content: left;
-            font-size: 13px;
-            font-weight: 100;
-        }
-
-        ul {
-            padding-left: 2px;
-        }
-
-        .information {
-            padding-left: 2px;
-            text-transform: uppercase;
-            font-size: 11px;
-            font-weight: 700;
-        }
-
-        .line {
-            border: 0.4px solid white;
-            opacity: 50%;
-        }
-    }
 }
