--- a/scss/_productPage.scss
+++ b/scss/_productPage.scss
@@ -2,6 +2,7 @@ body {
     
     div {
         font-family: 'Spartan', sans-serif;
+        letter-spacing: 2px;
     }
 
     .categoryContainer {
@@ -10,7 +11,7 @@ body {
         align-items: center;
         flex-direction: column;
         width: 100%;
-        margin: 30px 0;
+        margin: 30px 0 50px 0;
 
         .categoryContainerHeader {
             display: flex;
@@ -23,25 +24,35 @@ body {
                 font-size: 2rem;
             }
         }
-        .categoryContainerCategory {
+        .categoryContainerButtons {
             display: flex;
             justify-content: space-evenly;
             align-items: center;
             width: 94%;
             height: 80px;
             border-bottom: 1px solid rgb(206, 206, 206);
+
+            a:link {
+                color: inherit;
+            }
+            a:visited {
+                color: inherit;
+            }
         }
     }
 
     .productContainer {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
         align-items: center;
         flex-direction: row;
         flex-wrap: wrap;
+        margin: 0 3% 50px 3%;
+
 
         .product {
-            width: 45%;
+            width: 48%;
+            margin-bottom: 20px;
 
             .productImage {
 
@@ -49,29 +60,37 @@ body {
                     width: 100%;
                 }
             }
-            .productTitle {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                flex-direction: row;
-                flex-wrap: wrap;
+            .productInfo {
+                margin-top: 10px;
 
-                .title {
-                    width: 80%;
+                .productTitle {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                
+
+                    .title {
+                        width: 75%;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                    }
+                    .colors {
+                        width: 20%;
+                        text-align: right;
+                    }
                 }
-                .colors {
-                    width: 20%;
+                .productPrice {
+                    width: 100%;
+
+                    .price {
+                        font-weight: 700;
+                        font-size: 80%;
+                    }
                 }
             }
-            .productPrice {
-                width: 100%;
-
-                .price {
-                    font-weight: 700;
-                    font-size: 80%;
-                }
-            }
-            
         }
     }
 
