--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,4 +6,5 @@
 @import 'productPage';
 @import 'shoppingCart';
 @import 'footer';
+@import 'mixins';
 @import url('https://fonts.googleapis.com/css?family=Spartan:100,200,300,400,500,600,700,800,900&display=swap');
