--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -4,20 +4,16 @@ body {
             padding: 0px;
             margin-top: 10px;
 
-        .container-fluid {
+        .myFooter {
             background-color: #7f8375;
-            opacity: 70%;
             color: white;
             letter-spacing: 3px;
             padding-top: 70px;
             padding-bottom: 50px;
             position: absolute;
-            
-        
-        #footer-container {
-            flex: none;
-            padding-top: 10px;
-            padding-bottom: 20px;
+            bottom: 0;
+            left: 0;
+            width: 100%;
 
             li {
                 list-style-type: none;
@@ -43,6 +39,5 @@ body {
                 opacity: 50%;
             }
         }
-    }
     }
 }
