--- a/views/partial/footer.ejs
+++ b/views/partial/footer.ejs
@@ -1,9 +1,7 @@
 <footer id="sticky-footer">
-  <div class="container-fluid">
-    <div class="row d-flex justify-content-between pt-5" id="footer-container">
+  <div class="container-fluid myFooter">
+    <div class="informationbox">
 
-    <!-- <div class="informationbox"> -->
-      
       <div class="col-sm-12">
         <div class="informationlist">
           <h2 class="information">Information</h2>
@@ -26,7 +24,7 @@
           </ul>
         </div>
       </div>
-    <!-- </div> -->
+    </div>
   </div>
 </footer>
 
