--- a/public/main.css
+++ b/public/main.css
@@ -85,13 +85,16 @@ body {
       display: flex;
       justify-content: space-evenly;
       align-items: center;
-      width: 94%;
+      width: 80%;
       height: 80px;
       border-bottom: 1px solid #cecece; }
-      body .categoryContainer .categoryContainerButtons a:link {
-        color: inherit; }
-      body .categoryContainer .categoryContainerButtons a:visited {
-        color: inherit; }
+      body .categoryContainer .categoryContainerButtons p {
+        width: 50%;
+        text-align: center; }
+        body .categoryContainer .categoryContainerButtons p a:link {
+          color: inherit; }
+        body .categoryContainer .categoryContainerButtons p a:visited {
+          color: inherit; }
   body .productContainer {
     display: flex;
     justify-content: flex-start;
