--- a/scss/_productPage.scss
+++ b/scss/_productPage.scss
@@ -31,17 +31,23 @@ body {
             display: flex;
             justify-content: space-evenly;
             align-items: center;
-            width: 94%;
+            width: 80%;
             height: 80px;
             border-bottom: 1px solid rgb(206, 206, 206);
 
-            a:link {
-                color: inherit;
+            p {
+                width: 50%;
+                text-align: center;
 
+                a:link {
+                    color: inherit;
+    
+                }
+                a:visited {
+                    color: inherit;
+                }
             }
-            a:visited {
-                color: inherit;
-            }
+            
         }
     }
 
