--- a/views/partial/navbar.ejs
+++ b/views/partial/navbar.ejs
@@ -1,32 +1,39 @@
-<div class="toggle">
+<div class="burgerContainer">
     <button type="button" class="hambutton"><i class="fas fa-bars fa-2x menu" aria-hidden="true"></i></button>
 </div>
-<nav class="nav">
-    <div class="search">
-        <i class="fas fa-search fa-lg"></i><input type="text" class="inputsearch">
-    </div>
-    <hr>
-    <ul>
-        <li><a href="#">Women</a>
-        <li><a href="#">T-Shirts</a></li>
-        <li><a href="#">Crewnecks</a></li>
-        <li><a href="#">Hoddie</a></li>
-        </li>
-        <li><a href="#">T-Shirts</a></li>
-        <li><a href="#">Crewnecks</a></li>
-        <li><a href="#">Hoddie</a></li>
+<nav class="navContainer">
+    <div class="searchbarContainer">
+        <div class="searchIcon"></div>
 
-        <li><a href="#">Men</a></li>
+    <input type="text" class="inputsearch" placeholder="Search Products">
+    <!-- <hr> -->
+    </div>
+    <!-- <hr> -->
+    <ul class="menWomen">
+        <li class="fat bottom"><a href="#">Shop all </a></li>
+        <li class="fat"><a href="#">Women</a></li>
         <li><a href="#">T-Shirts</a></li>
         <li><a href="#">Crewnecks</a></li>
-        <li><a href="#">Hoddie</a></li>
+        <li><a href="#">Hoodies</a></li>
+        
+        <li class="fat"><a href="#">Men</a></li>
+        <li><a href="#">T-Shirts</a></li>
+        <li><a href="#">Crewnecks</a></li>
+        <li><a href="#">Hoodies</a></li>
+
     </ul>
-    <hr>
-    <ul>
-        <li><a href="#">Home</a></li>
+
+
+
+   <ul class="about">
+        <li class="freeShipping">Free shipping on orders over 990 sek, and free returns</li>
+        
         <li><a href="#">Subcribe</a></li>
         <li><a href="#">Store Locator</a></li>
         <li><a href="#">Customer Service</a></li>
+    </ul>
+
+    <ul class="signIn">
         <li><a href="#">Sign in</a></li>
         <li><a href="#">Shipping to: Worldwide</a></li>
 
