--- a/public/main.css
+++ b/public/main.css
@@ -1,46 +1,73 @@
 @import url("https://fonts.googleapis.com/css?family=Spartan:100,200,300,400,500,600,700,800,900&display=swap");
-<<<<<<< HEAD
 body {
+  font-family: 'Spartan', sans-serif;
   padding-bottom: 0; }
-  body div {
-    font-family: 'Spartan', sans-serif; }
-  body nav {
+  body .navContainer {
+    z-index: 999;
     width: 100%;
-    background: #f7f7f7;
-    z-index: 1;
-    position: fixed;
-    left: -100%;
-    transition: all 500ms linear;
-    font-family: 'Spartan', sans-serif; }
-    body nav .search {
-      width: 100%;
-      padding: 10px; }
-      body nav .search .inputsearch {
-        width: 90%;
+    position: absolute;
+    transform: translateX(-130%);
+    transition-timing-function: ease-in;
+    background-color: white;
+    transition: 1s; }
+    body .navContainer .searchbarContainer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 92%;
+      padding: 5px 20px;
+      margin: 0 4%;
+      border-bottom: 1px solid #7f8375; }
+      body .navContainer .searchbarContainer .searchIcon {
+        background-image: url("../public/assets/searchicon.png");
+        background-color: #cccccc;
+        height: 30px;
+        width: 30px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover; }
+      body .navContainer .searchbarContainer .inputsearch {
+        width: 100%;
         border: none;
-        border-bottom: 1px solid #7f8375;
-        background: #f7f7f7; }
-    body nav ul {
-      width: 80%;
-      margin: 0 auto;
+        background: white;
+        padding: 20px 0 10px 40px; }
+    body .navContainer .about, body .navContainer .signIn, body .navContainer .menWomen {
+      width: 90%;
+      margin: 50px auto;
       padding: 0; }
-      body nav ul li {
+      body .navContainer .about .freeShipping, body .navContainer .signIn .freeShipping, body .navContainer .menWomen .freeShipping {
+        width: 35%;
+        margin-bottom: 40px;
+        font-weight: bold; }
+      body .navContainer .about .fat, body .navContainer .signIn .fat, body .navContainer .menWomen .fat {
+        font-weight: bold; }
+      body .navContainer .about .bottom, body .navContainer .signIn .bottom, body .navContainer .menWomen .bottom {
+        margin-bottom: 30px; }
+      body .navContainer .about li, body .navContainer .signIn li, body .navContainer .menWomen li {
         list-style: none;
         padding: 5px;
         color: #7f8375;
         text-decoration: none; }
-        body nav ul li a {
+        body .navContainer .about li a, body .navContainer .signIn li a, body .navContainer .menWomen li a {
           color: #7f8375;
           text-decoration: none; }
-        body nav ul li :hover {
+        body .navContainer .about li :hover, body .navContainer .signIn li :hover, body .navContainer .menWomen li :hover {
           color: black;
           text-decoration: none; }
-  body .toggle {
+    body .navContainer .menWomen {
+      border-bottom: 1px solid #7f8375;
+      width: 92%;
+      padding-bottom: 50px; }
+  body .navShow {
+    transition: 1s;
+    transform: translateX(0%);
+    transition-timing-function: ease-out; }
+  body .burgerContainer {
     width: 100%;
     padding: 10px 20px;
     text-align: left;
     background-color: bisque; }
-    body .toggle .hambutton {
+    body .burgerContainer .hambutton {
       border: none;
       background: bisque; }
   body nav.active {
@@ -48,94 +75,6 @@ body {
   body .close {
     cursor: pointer;
     transform: rotate(45deg); }
-=======
-body div {
-  font-family: 'Spartan', sans-serif; }
-
-body .nav {
-  z-index: 999;
-  width: 100%;
-  position: absolute;
-  transform: translateX(-130%);
-  transition-timing-function: ease-in;
-  background-color: white;
-  transition: 1s; }
-  body .nav .search {
-    width: 100%;
-    padding: 10px; }
-    body .nav .search .inputsearch {
-      width: 90%;
-      border: none;
-      border-bottom: 1px solid #7f8375;
-      background: #f7f7f7; }
-  body .nav ul {
-    width: 80%;
-    margin: 0 auto;
-    padding: 0; }
-    body .nav ul li {
-      list-style: none;
-      padding: 5px;
-      color: #7f8375;
-      text-decoration: none; }
-      body .nav ul li a {
-        color: #7f8375;
-        text-decoration: none; }
-      body .nav ul li :hover {
-        color: black;
-        text-decoration: none; }
-
-body .navShow {
-  transition: 1s;
-  transform: translateX(0%);
-  transition-timing-function: ease-out; }
-
-body .toggle {
-  width: 100%;
-  padding: 10px 20px;
-  text-align: left;
-  background-color: bisque; }
-  body .toggle .hambutton {
-    border: none;
-    background: bisque; }
-
-body nav.active {
-  left: 0px; }
-
-body .close {
-  cursor: pointer;
-  transform: rotate(45deg); }
->>>>>>> e81456f4e3c47402c653f9014603c3ac965e66cb
-
-#sticky-footer {
-  padding: 0px;
-  margin-top: 10px; }
-  #sticky-footer .myFooter {
-    background-color: #7f8375;
-    opacity: 70%;
-    color: white;
-    letter-spacing: 3px;
-    padding-top: 70px;
-    padding-bottom: 50px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%; }
-    #sticky-footer .myFooter li {
-      list-style-type: none;
-      padding: 5px;
-      justify-content: left;
-      font-size: 13px;
-      font-weight: 100; }
-    #sticky-footer .myFooter ul {
-      padding-left: 2px; }
-    #sticky-footer .myFooter .information {
-      padding-left: 2px;
-      text-transform: uppercase;
-      font-size: 11px;
-      font-weight: 700; }
-    #sticky-footer .myFooter .line {
-      border: 0.4px solid white;
-      opacity: 50%; }
 
 .container-fluid #subscribebox {
   background-color: #7f8375;
