--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import 'loginPopUp';
 @import 'miniShoppingCart';
 @import 'productPage';
+@import 'detailProductPage';
 @import 'shoppingCart';
 @import 'footer';
 @import 'mixins';
