--- a/views/detailProductPage.ejs
+++ b/views/detailProductPage.ejs
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
+    <%- include ("partial/header.ejs") %>
 <body>
-    <div>
-        <p><%= clickedProduct %></p>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12" id="subscribebox">
+                SUBSCRIBE FOR 10% OFF
+            </div>
+        </div>
     </div>
+<!-- Navbar -->
+    <%- include ("partial/navbar.ejs") %>
+
+<!-- Product -->
+    
+<section id="detailProductPage">
+
+</section>
+
+    
+
 </body>
 </html>
