--- a/views/productPage.ejs
+++ b/views/productPage.ejs
@@ -12,37 +12,41 @@
 <!-- Navbar -->
     <%- include ("partial/navbar.ejs") %>
 
+    <section id="productPage">
 <!-- Categories -->
-    <div class="categoryContainer">
-        <div class="categoryContainerHeader">
-            <h2><%= heading %></h2>
+        <div class="categoryContainer">
+            <div class="categoryContainerHeader">
+                <h2><%= heading %></h2>
+            </div>
+            <div class="categoryContainerButtons">
+                <p><a href="/<%= otherCategories[0] %>">Shop <%= otherCategories[0] %></a></p>
+                <p><a href="/<%= otherCategories[1] %>">Shop <%= otherCategories[1] %></a></p>
+            </div>
         </div>
-        <div class="categoryContainerButtons">
-            <p><a href="/<%= otherCategories[0] %>">Shop <%= otherCategories[0] %></a></p>
-            <p><a href="/<%= otherCategories[1] %>">Shop <%= otherCategories[1] %></a></p>
-        </div>
-    </div>
 
 <!-- Products -->
-    <div class="productContainer">
-        <% products.forEach((product) => { %>
-            <div class="product">
-                
-                <div class="productImage">
-                    <a href="/products/<%= product._id %>"><img src="<%= product.imgUrl %>" alt="productImage"></a>
-                </div>
-                <div class="productInfo">
-                    <div class="productTitle">
-                        <span class="title"><%= product.title %></span>
-                        <span class="colors">ooo</span>
+
+        <div class="productContainer">
+            <% products.forEach((product) => { %>
+                <div class="product">
+                    
+                    <div class="productImage">
+                        <a href="/products/<%= product._id %>"><img src="<%= product.imgUrl %>" alt="productImage"></a>
                     </div>
-                    <div class="productPrice">
-                        <span class="price"><%= product.price %> SEK</span>
+                    <div class="productInfo">
+                        <div class="productTitle">
+                            <span class="title"><%= product.title %></span>
+                            <span class="colors">ooo</span>
+                        </div>
+                        <div class="productPrice">
+                            <span class="price"><%= product.price %> SEK</span>
+                        </div>
                     </div>
                 </div>
-            </div>
-        <% }) %>
-    </div>
+            <% }) %>
+        </div>
+
+    </section>
 
     
 
