--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -96,11 +96,11 @@ body {
         width: 100%;
         padding: 10px 20px;
         text-align: left;
-        background-color: bisque;
+        background-color: white;
 
         .hambutton {
             border: none;
-            background: bisque;
+            background: white;
         }
     }
 
